// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSelectedOutboundEmailIdentifier if selected outbound ANI 1`] = `
Object {
  "mockField": "mock-value",
}
`;

exports[`getSelectedOutboundPhoneIdentifier if selected outbound ANI 1`] = `
Object {
  "mockField": "mock-value",
}
`;

exports[`selectOutboundIdentifierListsForChannel Sort items from outbound lists 1`] = `
Array [
  Object {
    "channelType": "voice",
    "flowId": "1a",
    "label": "Test A",
    "outboundIdentifier": "+11",
    "outboundIdentifierListId": "1",
    "value": "0001",
  },
  Object {
    "channelType": "voice",
    "flowId": "1aa",
    "label": "Test AA",
    "outboundIdentifier": "+111",
    "outboundIdentifierListId": "1",
    "value": "0002",
  },
  Object {
    "channelType": "email",
    "flowId": "1aa",
    "label": "Test D",
    "outboundIdentifier": "+111",
    "outboundIdentifierListId": "1",
    "value": "0003",
  },
  Object {
    "channelType": "voice",
    "flowId": "1a",
    "label": "Test D12",
    "outboundIdentifier": "+11",
    "outboundIdentifierListId": "2",
    "value": "0008",
  },
]
`;

exports[`selectOutboundIdentifierListsForChannel if outbound identifier list exist 1`] = `
Array [
  Object {
    "channelType": "voice",
    "flowId": "1a",
    "label": "test1",
    "outboundIdentifier": "+11",
    "outboundIdentifierListId": "1",
    "value": "1b",
  },
  Object {
    "channelType": "sms",
    "flowId": "1aa",
    "label": "test2",
    "outboundIdentifier": "+111",
    "outboundIdentifierListId": "1",
    "value": "1bb",
  },
  Object {
    "channelType": "email",
    "flowId": "1aa",
    "label": "test3",
    "outboundIdentifier": "+111",
    "outboundIdentifierListId": "1",
    "value": "1bb2",
  },
]
`;

exports[`selectOutboundIdentifierListsForChannel if outbound identifier lists don't have items of passed channel types 1`] = `Array []`;
